--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+<h1>This is a heading</h1>
+<p>My Name is Shobhit.</p>
+<p>Shubham This side.</p>
+
+Abhishek addes : in another commit
 
 </body>
 </html>
